# Scavenger

./: Cargo.toml  README.md
.github/workflows/: deploy-mainnet.yml  deploy-testnet.yml  performance.yml  smoke-tests.yml
Scavenger/docs/: CONTRACT_API.md
docs/: TEST_COVERAGE_REPORT.md
docs/tests/: package-lock.json  package.json  validate_api_doc.test.ts
frontend/: .eslintrc.cjs  lighthouse-config.js  lighthouserc.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
stellar-contract/src/: errors.rs  events.rs  lib.rs  test_transfer_path_validation.rs  types.rs
stellar-contract/test_snapshots/: test_all_waste_types_retrievable.1.json  test_all_waste_types_tracked_in_stats.1.json  test_batch_material_submission_and_verification.1.json  test_bulk_collection_transfer.1.json  test_chain_with_multiple_collectors.1.json  test_charity_not_set_fails.1.json  test_complete_incentive_lifecycle.1.json  test_complete_recycler_to_collector_to_manufacturer_flow.1.json  test_confirm_deactivated_waste_fails.1.json  test_confirm_nonexistent_waste_fails.1.json  test_confirmation_event_emission.1.json  test_confirmation_event_sequence.1.json  test_confirmer_updates_correctly.1.json  test_deactivate_already_deactivated_waste.1.json  test_deactivate_nonexistent_incentive.1.json  test_deactivate_nonexistent_incentive_fails.1.json  test_deactivate_nonexistent_waste.1.json  test_deactivate_waste.1.json  test_deactivate_waste_by_admin.1.json  test_deactivate_waste_non_admin.1.json  test_deregistered_participant.1.json  (+317 more)
(+88 files in other folders)
